#2 Commit - Changed initial .svg generated to provided logo .png and css style accordingly to color scheme

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar">
             <a href="#" id="logo" onclick="navigate('home')">
-                <img src="power-logo.svg" alt="Power Logo" class="logo">
+                <img src="power-logo.png" alt="Power Logo" class="logo">
             </a>
             <ul class="nav-links">
                 <li><a href="#" id="nav-home" onclick="navigate('home')">Home</a></li>
