--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
             </a>
             <ul class="nav-links">
                 <li><a href="#" id="nav-home" onclick="navigate('home')">Home</a></li>
-                <li><a href="#" id="nav-televisions" onclick="navigate('televisions')">Televisions</a></li>
                 <li><a href="#" id="nav-about" onclick="navigate('about')">About Us</a></li>
+                <li><a href="#" id="nav-televisions" onclick="navigate('televisions')">Televisions</a></li>
             </ul>
         </nav>
     </header>
@@ -25,7 +25,7 @@
         <p>Our mission is to provide clear, up-to-date information to help you save energy and money.</p>
     </main>
     <footer>
-        <p>&copy; 2025 Teo Je | GenAI was used to generate code and content.</p>
+        <p>&copy; 2025 Teo Jia En | GenAI was used to generate code and content.</p>
     </footer>
     <script src="script.js"></script>
 </body>
